--- a/proj.html
+++ b/proj.html
@@ -55,15 +55,15 @@
 											<span class="image left"><img src="images/teslatalk.jpg" alt="" /></span>
 											Telsa Talk is a information hub for Tesla owners. Different information about Tesla such as price calculator, update histories are included in the website.
 											<li>Node.js</li>
+											<li>Vue JS</li>
 											<li>Firebase</li>
-											<li>Vue Material</li>
 										</p>
 													
 
 									</div>
 								
 								<!-- Box -->
-									<h2><a href="http://13.250.233.192:3000/">Landscope</a></h2>
+									<h2><a href="http://13.250.233.192/">Landscope</a></h2>
 									<div class="box">
 										<p>
 											<span class="image right"><img src="images/landscope.jpg" alt="" /></span>
@@ -72,7 +72,6 @@
 											<li>React</li>
 											<li>Express.js</li>
 											<li>deck.gl</li>
-											<li>Material UI</li>
 											<li>R (Data Analysis)</li>
 											<li>BeautifulSoup (Python Crawler)</li>
 										</p>
