--- a/index.html
+++ b/index.html
@@ -5,81 +5,105 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Warren Chan's Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-loading">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+<head>
+	<title>Warren Chan's Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Chan Wai Lun<br />
-						Warren</h1>
-						<p>Previous works and self-initiated projects.</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+<body class="is-loading">
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Warren Chan</a>
+	<!-- Wrapper -->
+	<div id="wrapper" class="fade-in">
+
+		<!-- Intro -->
+		<div id="intro">
+			<h1>Chan Wai Lun<br />
+				Warren</h1>
+			<p>Previous works and self-initiated projects.</p>
+			<ul class="actions">
+				<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
+			</ul>
+		</div>
+
+		<!-- Header -->
+		<header id="header">
+			<a href="index.html" class="logo">Warren Chan</a>
+		</header>
+
+		<!-- Nav -->
+		<nav id="nav">
+			<ul class="links">
+				<li class="active"><a href="index.html">Works</a></li>
+				<li><a href="eca.html">Activities</a></li>
+				<li><a href="proj.html">Projects</a></li>
+				<li><a href="video.html">Videos</a></li>
+			</ul>
+			<ul class="icons">
+				<li><a href="mailto:warren.chan.cuhk@gmail.com" class="icon fa-envelope"><span
+							class="label">Twitter</span></a></li>
+				<li><a href="http://hk.linkedin.com/in/warren10hk" class="icon fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://github.com/warren10hk" class="icon fa-github"><span class="label">GitHub</span></a>
+				</li>
+				<li><a href="media.html" class="icon fa-newspaper-o"><span class="label">Media</span></a></li>
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<span class="date">Sept 2018 - Nov 2018</span>
+					<h2><a href="http://www.foris.co/">Foris Limited</a></h2>
+				</header>
+				<h3>Data Engineer Intern, Business Intelligence</h3>
+				<a href="http://www.foris.co/" class="image main"><img src="images/foris.jpg" alt="" /></a>
+			</article>
+
+			<!-- Posts -->
+			<section class="posts">
+				<article>
+					<header>
+						<h2><a href="https://www.dellemc.com/en-hk/">Dell EMC Computer<br />System Limited</a></h2>
+						<span class="date">June 2018 - August 2018</span>
 					</header>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">Works</a></li>
-							<li><a href="eca.html">Activities</a></li>
-							<li><a href="proj.html">Projects</a></li>
-							<li><a href="video.html">Videos</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="mailto:warren.chan.cuhk@gmail.com" class="icon fa-envelope"><span class="label">Twitter</span></a></li>
-							<li><a href="http://hk.linkedin.com/in/warren10hk" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/warren10hk" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="media.html" class="icon fa-newspaper-o"><span class="label">Media</span></a></li>
-						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">June 2017 - August 2017</span>
-									<h2><a href="https://www.daocloud.io/">DaoCloud Network Technology Limited</a></h2>
-								</header>
-								<h3>Summer Intern, R&D Department</h3>
-								<a href="https://www.daocloud.io/" class="image main"><img src="images/daocloud.jpg" alt="" /></a>
-							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="https://www.tricorglobal.com/">Tricor<br />Services Limited</a></h2>
-										<span class="date">June 2016 - August 2016</span>
-									</header>
-									<h3>Summer Intern, Business Services IT</h3>
-									<a href="https://www.tricorglobal.com/" class="image fit"><img src="images/tricor.jpg" alt="" /></a>
-								</article>
-								<article>
-									<header>
-										<h2><a href="http://www.cloudoceantech.com/">Cloud Ocean<br />Technology Limited</a></h2>
-										<span class="date">April 2015 - September 2015</span>
-									</header>
-									<h3>Technical Specialist</h3>
-									<a href="http://www.cloudoceantech.com/" class="image fit"><img src="images/cloudocean.jpg" alt="" /></a>
-								</article>
-								<!--
+					<h3>Associate Data Engineer,<br />Consulting Services</h3>
+					<a href="https://www.dellemc.com/en-hk/" class="image fit"><img src="images/dellemc.jpg"
+							alt="" /></a>
+				</article>
+				<article>
+					<header>
+						<h2><a href="https://www.daocloud.io/">DaoCloud Network<br />Technology Limited</a></h2>
+						<span class="date">June 2017 - August 2017</span>
+					</header>
+					<h3>Summer Intern,<br />R&D Department</h3>
+					<a href="https://www.daocloud.io/" class="image fit"><img src="images/daocloud.jpg" alt="" /></a>
+				</article>
+				<article>
+					<header>
+						<h2><a href="https://www.tricorglobal.com/">Tricor<br />Services Limited</a></h2>
+						<span class="date">June 2016 - August 2016</span>
+					</header>
+					<h3>Summer Intern,<br />Business Services IT</h3>
+					<a href="https://www.tricorglobal.com/" class="image fit"><img src="images/tricor.jpg" alt="" /></a>
+				</article>
+				<article>
+					<header>
+						<h2><a href="http://www.cloudoceantech.com/">Cloud Ocean<br />Technology Limited</a></h2>
+						<span class="date">April 2015 - September 2015</span>
+					</header>
+					<h3>Technical Specialist<br />　</h3>
+					<a href="http://www.cloudoceantech.com/" class="image fit"><img src="images/cloudocean.jpg"
+							alt="" /></a>
+				</article>
+				<!--
 								<article>
 									<header>
 										<span class="date">September 2014 - June 2016</span>
@@ -87,33 +111,29 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								</article>
 								-->
-							</section>
+			</section>
 
-					</div>
+		</div>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Warren Chan 2018</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+		<!-- Copyright -->
+		<div id="copyright">
+			<ul>
+				<li>&copy; Warren Chan 2018</li>
+				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
